--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <nav>
             <h3 class="nav-title ">Ma<span class="text-primary">r</span>y</h3>
             <ul>
@@ -22,6 +22,17 @@
                 <li><button class="btn-primary">Hire me</button></li>
             </ul>
         </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h3 class="banner-greeting">Hi , I am</h3>
+                <h1 class="banner-title"> Mary Hardy</h1>
+                <p>Shot what able cold new see hold. Frindly as an betrayed formerly he. Morning beause as to society hehaved moments</p>
+                <button class="btn-primary">Download cv</button>
+                <button class="btn-primary">Contact</button>
+            </div>
+            <img class="profile-picture" src="images/white.webp" alt="">
+        </div>
+       
 
     </header>
     <main>
