--- a/index.html
+++ b/index.html
@@ -26,16 +26,20 @@
             <div class="banner-content">
                 <h3 class="banner-greeting">Hi , I am</h3>
                 <h1 class="banner-title"> Mary Hardy</h1>
-                <p>Shot what able cold new see hold. Frindly as an betrayed formerly he. Morning beause as to society hehaved moments</p>
+                <p class="banner-description">Shot what able cold new see hold. Frindly as an betrayed formerly he. Morning beause as to society hehaved moments</p>
                 <button class="btn-primary">Download cv</button>
                 <button class="btn-primary">Contact</button>
             </div>
-            <img class="profile-picture" src="images/white.webp" alt="">
+            <img class="profile-picture" src="images/no background photo.png" alt="">
         </div>
        
 
     </header>
     <main>
+        <section class="about">
+        <h3 class="section-title">About me</h3>
+        <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus perferendis impedit itaque voluptas, deserunt laboriosam voluptatibus enim fugiat molestias sed temporibus, eum eveniet consequatur officiis quo pariatur repellendus, aperiam ex.</p>
+        </section>
 
     </main>
     <footer>
