--- a/index.html
+++ b/index.html
@@ -39,6 +39,25 @@
         <section class="about">
         <h3 class="section-title">About me</h3>
         <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus perferendis impedit itaque voluptas, deserunt laboriosam voluptatibus enim fugiat molestias sed temporibus, eum eveniet consequatur officiis quo pariatur repellendus, aperiam ex.</p>
+        <div class="about-info-container">
+            <div class="about-info">
+                <h4 class="info-description"> Name</h4>
+                <p>Mary hardy</p>
+            </div>
+            <div class="about-info">
+                <h4 class="info-description">Email</h4>
+                <p>info@gmail.com</p>
+            </div>
+            <div class="about-info">
+                <h4 class="info-description">Date of birth</h4>
+                <p> 11 november 1987</p>
+            </div>
+            <div class="about-info">
+                <h4 class="info-description">from</h4>
+                <p>>los angles USA</p>
+            </div>
+            
+        </div>
         </section>
 
     </main>
