--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <button class="btn-primary">Download cv</button>
                 <button class="btn-primary">Contact</button>
             </div>
-            <img class="profile-picture" src="images/no background photo.png" alt="">
+            <img class="profile-picture" src="images/hardy.png" alt="">
         </div>
        
 
@@ -58,6 +58,84 @@
             </div>
             
         </div>
+        </section>
+        <section>
+            <h3 class="section-title">what i do</h3>
+            <p id="what-i-do-description" class="section-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum, at consequatur quibusdam!</p>
+        <div class="skills-container">
+            <div class="skill">
+                <img src="images/js (1).png" alt="">
+                <h3 class="skill-title">Vanila-javascript</h3>
+                <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, voluptates.</p>
+            </div>
+            <div class="skill">
+                <img src="images/react (1).png" alt="">
+                <h3 class="skill-title">React</h3>
+                <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat id </p>
+            </div>
+            <div class="skill">
+                <img src="images/nodejs.png" alt="">
+                <h3 class="skill-title">Node js</h3>
+                <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem reprehenderit la.</p>
+            </div>
+            <div class="skill">
+                <img src="images/mongo.png" alt="">
+                <h3 class="skill-title">MongoDB</h3>
+                <p class="skill-description">lorem15 this is our country its my country</p>
+            </div>
+        </div>
+        </section>
+       <!--Resume of summaery--> 
+        <section>
+            <h3 class="section-title">A sumarry of resumue</h3>
+            <div class="resume-conatiner">
+               <div class="resume-column">
+                <h3 class="resume-column-title">My education</h3>
+
+                <div class="resume-item">
+                    <h2 class="resume-item-title">Master in computer enginering
+                    </h2>
+                    <h3 class="resume-item-institue">Harvard University/2015 - 2017</h3>
+                    <p class="resume-item-decription">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit maiores in sapiente explicabo illum aut vero eligendi ullam, architecto dolores.</p>
+                </div>
+                <hr>
+
+                <div class="resume-item">
+                    <h2 class="resume-item-title">Master in computer enginering</h2>
+                    <h3 class="resume-item-institue">Harvard University/2015 - 2017</h3>
+                    <p class="resume-item-decription">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit maiores in sapiente explicabo illum aut vero eligendi ullam, architecto dolores</p>
+                </div>
+
+                <div class="resume-item">
+                    <h2 class="resume-item-title">Master in computer enginering</h2>
+                    <h3 class="resume-item-institue">Harvard University/2015 - 2017</h3>
+                    <p class="resume-item-decription">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit maiores in sapiente explicabo illum aut vero eligendi ullam, architecto dolores</p>
+                </div>
+               </div>
+               <div class="resume-column">
+                <h3 class="resume-column-title">My exprience</h3>
+                <div class="resume-item">
+                    <h2 class="resume-item-title">Master in computer enginering
+                    </h2>
+                    <h3 class="resume-item-institue">Harvard University/2015 - 2017</h3>
+                    <p class="resume-item-decription">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit maiores in sapiente explicabo illum aut vero eligendi ullam, architecto dolores.</p>
+                </div>
+                <hr>
+
+                <div class="resume-item">
+                    <h2 class="resume-item-title">Master in computer enginering</h2>
+                    <h3 class="resume-item-institue">Harvard University/2015 - 2017</h3>
+                    <p class="resume-item-decription">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit maiores in sapiente explicabo illum aut vero eligendi ullam, architecto dolores</p>
+                </div>
+
+                <div class="resume-item">
+                    <h2 class="resume-item-title">Master in computer enginering</h2>
+                    <h3 class="resume-item-institue">Harvard University/2015 - 2017</h3>
+                    <p class="resume-item-decription">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit maiores in sapiente explicabo illum aut vero eligendi ullam, architecto dolores</p>
+                </div>
+               </div>
+               </div>
+            </div>
         </section>
 
     </main>
