--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
        <!--Resume of summaery--> 
         <section>
             <h3 class="section-title">A sumarry of resumue</h3>
-            <div class="resume-conatiner">
+            <div class="resume-container">
                <div class="resume-column">
                 <h3 class="resume-column-title">My education</h3>
 
@@ -135,12 +135,26 @@
                 </div>
                </div>
                </div>
+               <div class="download-cv">
+                <button class="btn-primary">Download CV</button>
+               </div>
+            
             </div>
         </section>
 
     </main>
     <footer>
-
+     <div class="footer-column">
+        <h3 class="section-title">Let's Contact</h3>
+        <p class="section-decription">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo, quo! Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, iste?</p>
+        <div class="social-links">
+            <a href=""><img src="images/facebook.png" alt=""></a>
+            <a href=""><img src="images/twitter.png" alt=""></a>
+            <a href=""><img src="images/insta.png" alt=""></a>
+        </div>
+     <div class="footer-column">
+        <h3 class="section-title">Let's Massage Me</h3>
+     </div>
     </footer>
 </body>
 </html>
